--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/aqua.css">
   <link rel="preload" href="./assets/css/fonts/thicccboi.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="icon" href="./assets/img/unnamed.png" type="image/x-icon">
 </head>
 
 <body>
   <div class="content-wrapper">
     <header class="wrapper ">
+      <!-- <div class="alert bg-primary text-white alert-dismissible fade show rounded-0 mb-1 text-lg-center" role="alert">
+        <div class="container">
+          <div class="alert-inner d-flex justify-content-center align-items-center p-0">
+            <span class="badge badge-lg bg-white text-primary text-uppercase rounded me-2">Update</span> New version of
+            our product is finally <a href="#" class="alert-link link-white hover ms-1">here</a>!
+          </div>
 
+        </div>
+
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div> -->
+      <!-- /.alert -->
       <nav class="navbar navbar-expand-lg classic transparent navbar-light">
         <div class="container flex-lg-row flex-nowrap align-items-center">
           <div class="navbar-brand w-100">
@@ -39,6 +51,18 @@
                 <li class="nav-item dropdown dropdown-mega">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
+                <!-- <li class="nav-item dropdown dropdown-mega">
+                  <a class="nav-link" href="aboutus.html">About Us</a>
+                </li> -->
+                <!-- <li class="nav-item dropdown dropdown-mega">
+                  <a class="nav-link" href="Products.html">Products</a>
+                </li>
+                <li class="nav-item dropdown dropdown-mega">
+                  <a class="nav-link" href="Innovation.html">Innovation</a>
+                </li> -->
+                <!-- <li class="nav-item dropdown dropdown-mega">
+                  <a class="nav-link" href="Contact.html">Invest Now</a>
+                </li> -->
 
 
                 <div class="offcanvas-footer d-lg-none">
