--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="navbar-other ms-lg-4">
             <ul class="navbar-nav flex-row align-items-center ms-auto">
               <li class="nav-item d-none d-md-block">
-                <a href="http://64.227.143.58/" class="btn btn-sm btn-primary rounded">Invest Now</a>
+                <a href="https://woldinvest.site/" class="btn btn-sm btn-primary rounded">Invest Now</a>
               </li>
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
@@ -134,7 +134,14 @@
                   </h1>
                   <p class="lead fs-23 lh-sm mb-7 pe-xxl-15">Wold provides investment opportunities in import and export
                     ventures, starting from an accessible amount of 2000 rupees. </p>
-                  <div><a href="http://64.227.143.58/" class="btn btn-lg btn-gradient gradient-1 rounded">Invest Now</a>
+                  <div><a href="https://woldinvest.site/" class="btn btn-lg btn-gradient gradient-1 rounded">Invest
+                      Now</a>
+                    <a href="/assets/WOLD.pdf" style="margin-left: 5%;"
+                      class="btn btn-lg btn-gradient gradient-12 rounded" download="WOLD.pdf">PDF</a>
+
+                  </div>
+                  <div>
+                    <img src="/assets/img/playstore.png" style="width:290px;margin-left:-3%;" alt="">
                   </div>
                 </div>
                 <!--/column -->
@@ -176,9 +183,11 @@
       <!-- /.grid-view -->
       <div style="padding-top: 2.2rem;" class="row text-center">
         <div class="col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-          <h2 class="fs-16 text-uppercase text-gradient gradient-1 mb-3">Roadmap:Forging Future Frontiers</h2>
-          <h3 class="display-4 mb-9 me-lg-n5">At Wold, we're not just creating trade opportunities; we're fostering a
-            culture of continuous innovation and progress.</h3>
+          <h2 class="fs-16 text-uppercase text-gradient gradient-1 mb-3">Roadmap: Exploring New Paths</h2>
+          <h3 class="display-4 mb-9 me-lg-n5">At Wold, we create trade opportunities and encourage ongoing innovation
+            and
+            progress.</h3>
+
         </div>
         <!-- /column -->
       </div>
@@ -198,8 +207,15 @@
             </div>
             <div>
               <h4>Our Vision</h4>
-              <p class="mb-2">Driven by a commitment to innovation, our vision is to shape a future where technology and
-                creativity come together, fostering progress and transforming lives on a global scale.</p>
+              <p class="mb-2">At WOLD, our vision is to make global trade accessible to everyone. We empower individuals
+                to invest in export and
+                import ventures with ease, starting with just 2000 INR. By providing transparent, low-barrier, and
+                high-return
+                opportunities, we aim to democratize the investment process. Our goal is to create a user-friendly
+                platform that
+                combines industry expertise and advanced technology to ensure reliable and profitable investment
+                experiences for retail
+                investors.</p>
             </div>
           </div>
         </div>
@@ -211,9 +227,13 @@
             </div>
             <div>
               <h4>Our Mission</h4>
-              <p class="mb-2">Dedicated to excellence, our mission is to lead through innovation, collaboration, and
-                superior performance. We aim to enhance communities by providing sustainable and impactful solutions in
-                global trade.</p>
+              <p class="mb-2">At WOLD, our mission is to enable everyone to invest in global trade easily and
+                transparently. We strive to provide a
+                platform where individuals can start investing with just 2000 INR, access diverse trade opportunities,
+                and earn
+                attractive returns. By combining industry expertise with cutting-edge technology, we aim to democratize
+                the investment
+                process and offer a reliable, user-friendly experience for all our investors.</p>
             </div>
           </div>
         </div>
@@ -225,9 +245,14 @@
             </div>
             <div>
               <h4>Our Values</h4>
-              <p class="mb-2">Integrity, innovation, and collaboration are the cornerstones of our values. These
-                principles guide us in developing ethical and forward-thinking solutions for a better, interconnected
-                world.</p>
+              <p class="mb-2">Accessibility: We make global trade investment opportunities available to everyone,
+                starting with just 2000 INR.
+                Transparency: We ensure clear and honest communication about all investment opportunities and processes.
+                Innovation: We use cutting-edge technology to create a user-friendly and reliable investment platform.
+                Inclusivity: We democratize the investment process, allowing more people to benefit from global trade.
+                Integrity: We operate with the highest standards of ethics and professionalism.
+
+              </p>
             </div>
           </div>
         </div>
