--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     ventures, starting from an accessible amount of 2000 rupees. </p>
                   <div><a href="https://woldinvest.site/" class="btn btn-lg btn-gradient gradient-1 rounded">Invest
                       Now</a>
-                    <a href="/assets/WOLD.pdf" style="margin-left: 5%;"
+                    <a href="/assets/img/WOLD.pdf" style="margin-left: 5%;"
                       class="btn btn-lg btn-gradient gradient-12 rounded" download="WOLD.pdf">PDF</a>
 
                   </div>
