6 git commit -m 6 git commit -m 6

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                     ventures, starting from an accessible amount of 2000 rupees. </p>
                   <div><a href="https://woldinvest.site/" class="btn btn-lg btn-gradient gradient-1 rounded">Invest
                       Now</a>
-                    <a href="/assets/img/WOLD.pdf" style="margin-left: 5%;"
+                    <a href="./assets/img/WOLD.pdf" style="margin-left: 5%;"
                       class="btn btn-lg btn-gradient gradient-12 rounded" download="WOLD.pdf">PDF</a>
 
                   </div>
                   <div>
-                    <img src="/assets/img/playstore.png" style="width:290px;margin-left:-3%;" alt="">
+                    <img src="./assets/img/playstore.png" style="width:290px;margin-left:-3%;" alt="">
                   </div>
                 </div>
                 <!--/column -->
