--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
             <div>
               <h5 class="mb-0">Phone</h5>
-              <p><a href="tel: +91 9605 917 719" class="link-body">+91 87141 22257</a></p>
+              <p><a href="tel: +91 87141 22257" class="link-body">+91 87141 22257</a></p>
             </div>
           </div>
           <div class="d-flex flex-row">
